# summa-playground

./: .gitignore  Cargo.toml  README.md
contracts/: README.md  demo.ts  dockerfile  start.sh
csv/: signatures.csv  two_assets_entry_2_15.csv
src/: export_proof.rs  inclusion_verification.rs  initialization.rs  main.rs  solvency_proof.rs  submit_proof.rs  test.rs
