[package]
name = "summa-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dialoguer = "0.10.4"
ethers = "2.0.7"
num-bigint = "0.4.3"
serde = "1.0.171"
summa-backend = { path = "../snapshot/backend" }
summa-solvency = { git = "https://github.com/summa-dev/summa-solvency.git", package = "summa-solvency", branch = "master" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
tokio = { version = "1.29.1", features = ["full"] }
